# CSD2

./: .gitignore  CMakeLists.txt  README.md
CSD2a/aantekeningen/: les2_10-9-24.py  les3_17-9-24.py
CSD2a/eindopdracht/: README.md  beat.mid  eindopdracht.py
CSD2a/event_based_sequencer/: README.md
CSD2a/python_basics/: event_based_sequencer.py  helloworld.py  playsound.py  rhythmic_player.py  single_sample_sequencer.py
CSD2a/python_basics/testing/: playing-sound.py
CSD2a/rhythmic_player/: README.md
CSD2a/single_sample_sequencer/: README.md
CSD2b/: CMakeLists.txt
CSD2b/JuceTest/: CMakeLists.txt
CSD2b/instrumentClass/: CMakeLists.txt  MakeFile  instrument.cpp  instrument.h  main.cpp
CSD2b/instrumentInheritance/: CMakeLists.txt  Makefile  instrument.cpp  instrument.h  keys.cpp  keys.h  main.cpp  percs.cpp  percs.h  strings.cpp  strings.h
CSD2b/pointers/A/: CMakeLists.txt  basic_pointers.cpp
CSD2b/pointers/B/: CMakeLists.txt  main.cpp
CSD2b/pointers/C/: CMakeLists.txt  main.cpp
CSD2b/synthSong/: CMakeLists.txt  callback.cpp  callback.h  customCallback.h  input.cpp  input.h  main.cpp  melody.cpp  melody.h  osc.cpp  square.cpp  square.h  triangle.cpp  triangle.h
CSD2b/workFolder/: CMakeLists.txt  hello.cpp  speaker.cpp
CSD2b/workFolder/main/: main.cpp
CSD2b/workFolder/note_class/: CMakeLists.txt  main.cpp
CSD2b/workFolder/oscillator/: CMakeLists.txt  Makefile  main.cpp  oscillator.cpp  oscillator.h
CSD2b/workFolder/soundingOsc/: CMakeLists.txt  customCallback.h  osc.cpp  osc.h  saw.cpp  saw.h  sine.cpp  sine.h  triangle.cpp
(+27 files in other folders)
